// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Simple Spreadsheet Component simple rendering snapshot 1`] = `
<div
  class="o-spreadsheet h-100 w-100"
  style="grid-template-rows:min-content auto min-content; grid-template-columns:auto auto; --os-scrollbar-width:15px; "
>
  
  <div
    class="o-spreadsheet-topbar-wrapper o-two-columns"
  >
    <div
      class="o-spreadsheet-topbar d-flex flex-column user-select-none bg-white"
    >
      <div
        class="o-topbar-top d-flex justify-content-between border-bottom"
      >
        <!-- Menus -->
        <div
          class="o-topbar-topleft d-flex"
        >
          <div
            class="o-topbar-menu o-hoverable-button text-nowrap rounded"
            data-id="file"
          >
            File
          </div>
          <div
            class="o-topbar-menu o-hoverable-button text-nowrap rounded"
            data-id="edit"
          >
            Edit
          </div>
          <div
            class="o-topbar-menu o-hoverable-button text-nowrap rounded"
            data-id="view"
          >
            View
          </div>
          <div
            class="o-topbar-menu o-hoverable-button text-nowrap rounded"
            data-id="insert"
          >
            Insert
          </div>
          <div
            class="o-topbar-menu o-hoverable-button text-nowrap rounded"
            data-id="format"
          >
            Format
          </div>
          <div
            class="o-topbar-menu o-hoverable-button text-nowrap rounded"
            data-id="data"
          >
            Data
          </div>
          
        </div>
        <div
          class="o-topbar-topright d-flex justify-content-end align-items-center"
        >
          
        </div>
      </div>
      
      <!-- Toolbar and Cell Content -->
      
      <div
        class="o-topbar-toolbar d-flex"
      >
        <!-- Toolbar -->
        <div
          class="o-toolbar-tools d-flex ms-3 flex-grow-1"
        >
          <div
            class="d-flex tool-container"
            id="edit"
          >
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Undo (Ctrl+Z)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.43 9.43 8 12H1V5l2.96 2.958A8.29 8.29 0 0 1 9.32 6c3.46 0 6.42 2.11 7.68 5l-2 1c-.94-2.39-3.13-3.92-5.68-4a6.57 6.57 0 0 0-3.89 1.43"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Redo (Ctrl+Y)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.57 9.43 10 12h7V5l-2.96 2.96A8.29 8.29 0 0 0 8.68 6C5.22 6 2.26 8.11 1 11l2 1c.94-2.39 3.13-3.92 5.68-4a6.58 6.58 0 0 1 3.89 1.43"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button o-mobile-disabled"
              title="Paint Format"
            >
              <span>
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9,0 L1,0 C0.45,0 0,0.45 0,1 L0,4 C0,4.55 0.45,5 1,5 L9,5 C9.55,5 10,4.55 10,4 L10,3 L11,3 L11,6 L4,6 L4,14 L6,14 L6,8 L13,8 L13,2 L10,2 L10,1 C10,0.45 9.55,0 9,0 Z"
                    fill="currentColor"
                    transform="translate(3 2)"
                  />
                </svg>
              </span>
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Clear formatting (Ctrl+<)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.12 4.05 7.28 9.2l-2.43 5.3h2.5l1.64-3.58 4.59 4.58 1.27-1.27L3.4 2.77 2.12 4.05ZM5.67 2.5l2 2h1.76l-.55 1.21 1.71 1.71 1.34-2.92h3.92v-2H5.67"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <div>
              <div
                class="o-dropdown"
              >
                <div
                  class="o-number-editor d-flex align-items-center o-menu-item-button o-hoverable-button o-toolbar-button"
                  title="Zoom"
                >
                  <input
                    class="o-font-size o-number-input bg-transparent border-0"
                    max="300"
                    min="25"
                    type="number"
                  />
                  %
                  <span>
                    <div
                      class="o-icon fa-small o-caret-down"
                    >
                      <i
                        class="fa fa-caret-down"
                      />
                    </div>
                  </span>
                </div>
                
              </div>
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="numberFormat"
          >
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Format as percent"
            >
              <span
                style=""
              >
                <span
                  class="o-text-icon"
                >
                  %
                </span>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Decrease decimal places"
            >
              <span
                style=""
              >
                <span
                  class="o-text-icon"
                >
                  .0
                </span>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Increase decimal places"
            >
              <span
                style=""
              >
                <span
                  class="o-text-icon"
                >
                  .00
                </span>
              </span>
              
              
            </span>
            <div>
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="More formats"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon"
                    fill="currentColor"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 6h2v8h2V4H0m9 0H5v2h4v2H6.5A1.5 1.5 0 0 0 5 9.5V14h6v-2H7v-2h2.5A1.5 1.5 0 0 0 11 8.5v-3A1.5 1.5 0 0 0 9.5 4M12 4v2h4v2h-2v2h2v2h-4v2h4.5a1.5 1.5 0 0 0 1.5-1.5v-2A1.5 1.5 0 0 0 16.5 9 1.5 1.5 0 0 0 18 7.5v-2A1.5 1.5 0 0 0 16.5 4"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="fontSize"
          >
            <div
              class="o-dropdown"
            >
              <div
                class="o-number-editor d-flex align-items-center o-hoverable-button o-toolbar-button"
                title="Font Size"
              >
                <input
                  class="o-font-size o-number-input bg-transparent border-0"
                  max="400"
                  min="1"
                  type="number"
                />
                
                <span>
                  <div
                    class="o-icon fa-small o-caret-down"
                  >
                    <i
                      class="fa fa-caret-down"
                    />
                  </div>
                </span>
              </div>
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="textStyle"
          >
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Bold (Ctrl+B)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5 6.5C13.5 4.57 11.93 3 10 3H4.5v12h6.25c1.79 0 3.25-1.46 3.25-3.25 0-1.3-.77-2.41-1.87-2.93.83-.58 1.37-1.44 1.37-2.32M9.5 5c.83 0 1.5.67 1.5 1.5S10.33 8 9.5 8h-2V5h2m-2 8v-3H10c.83 0 1.5.67 1.5 1.5S10.83 13 10 13H7.5"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Italic (Ctrl+I)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 3v2h2.58l-3.66 8H3v2h8v-2H8.42l3.66-8H15V3"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Strikethrough"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.89 6.06c0-.46.1-.87.3-1.25.2-.38.46-.7.84-.97s.78-.47 1.28-.62A5.71 5.71 0 0 1 8.93 3c.61 0 1.16.08 1.65.25.5.17.92.4 1.27.7.35.3.62.66.81 1.07.19.41.28.87.28 1.36h-2.26a1.85 1.85 0 0 0-.11-.64 1.26 1.26 0 0 0-.33-.51 1.53 1.53 0 0 0-.56-.33A2.42 2.42 0 0 0 8.89 4.8c-.3 0-.55.03-.77.1a1.52 1.52 0 0 0-.54.27 1.14 1.14 0 0 0-.43.9c0 .36.18.66.55.91l.06.04C8.02 7.19 8.5 7.5 9 8H6s-.79-.62-.82-.69c-.19-.36-.29-.77-.29-1.25M16 9H2v2h7.22c.14.05.3.1.41.15.28.12.5.26.65.38.16.13.26.27.32.42.06.15.08.33.08.51 0 .18-.03.34-.1.49a1.02 1.02 0 0 1-.31.39 1.6 1.6 0 0 1-.53.26 2.71 2.71 0 0 1-.76.09c-.33 0-.62-.03-.89-.1a1.8 1.8 0 0 1-.68-.31 1.45 1.45 0 0 1-.44-.56c-.11-.23-.19-.57-.19-.74H4.55c0 .25.06.69.18 1.02a3.15 3.15 0 0 0 1.22 1.6c.28.2.58.36.92.49.33.13.67.23 1.04.29.36.06.72.09 1.08.09.6 0 1.15-.07 1.64-.21a3.88 3.88 0 0 0 1.25-.59 2.69 2.69 0 0 0 .8-.95c.19-.38.28-.81.28-1.29 0-.45-.08-.86-.23-1.211a2.26 2.26 0 0 0-.13-.25L16 11V9"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <div
              class="d-flex align-items-center"
            >
              <div
                class="o-color-picker-widget"
              >
                <span
                  class="o-color-picker-button o-hoverable-button o-menu-item-button o-toolbar-button"
                  title="Text Color"
                >
                  <span
                    style="border-color: #000000"
                  >
                    <svg
                      class="o-icon"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 1H8L3.5 13h2l1.12-3h4.75l1.12 3h2L10 1ZM7.38 8 9 3.67 10.62 8H7.38"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                
              </div>
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="cellStyle"
          >
            <div
              class="d-flex align-items-center"
            >
              <div
                class="o-color-picker-widget"
              >
                <span
                  class="o-color-picker-button o-hoverable-button o-menu-item-button o-toolbar-button"
                  title="Fill Color"
                >
                  <span
                    style="border-color: #ffffff"
                  >
                    <svg
                      class="o-icon"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14.5 8.87S13 10.49 13 11.49c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5c0-.99-1.5-2.62-1.5-2.62m-1.79-2.08L5.91 0 4.85 1.06l1.59 1.59-4.15 4.14a.996.996 0 0 0 0 1.41l4.5 4.5c.2.2.45.3.71.3.26 0 .51-.1.71-.29l4.5-4.5c.39-.39.39-1.03 0-1.42M4.21 7 7.5 3.71 10.79 7H4.21"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                
              </div>
            </div>
            <div
              class="d-flex position-relative"
              title="Borders"
            >
              <span
                class="o-hoverable-button o-menu-item-button o-toolbar-button"
              >
                <span>
                  <svg
                    class="o-icon"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 2v14h14V2H2m6 12H4v-4h4v4m0-6H4V4h4v4m6 6h-4v-4h4v4m0-6h-4V4h4v4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              
            </div>
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Merge cells"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6H1V2h7v2H3v2m7-2V2h7v4h-2V4h-5m0 10h5v-2h2v4h-7v-2m-9-2h2v2h5v2H1v-4m0-4h4V6l3 3-3 3v-2H1V8m9 1 3-3v2h4v2h-4v2l-3-3"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="alignment"
          >
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Horizontal align"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon align-left"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 16h10v-2H2v2M12 6H2v2h10V6M2 2v2h14V2H2m0 10h14v-2H2v2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Vertical align"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon align-bottom"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.5 9H8V2h2v7h2.5L9 12.5M3 14v2h12v-2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Wrapping"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon wrapping-overflow"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 8H6v2h7v2l3-3-3-3M2 2h2v14H2M9 2h2v4H9m0 6h2v4H9"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Rotation"
              >
                <span
                  style=""
                >
                  <svg
                    height="18"
                    transform="rotate(270)"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 2h1v12h1.5l-2 2-2-2H5m6-5h1v5h1.5l-2 2-2-2H11M8 2l7 2.8V6L8 8.8l-.43-1.12 1.9-.7V3.8l-1.9-.7L8 1.98m2.7 2.25v2.3l2.8-1.1z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="insert"
          >
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Insert chart"
            >
              <span
                style=""
              >
                <div
                  class="o-icon"
                >
                  <i
                    class="fa fa-bar-chart"
                  />
                </div>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Insert pivot table"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  viewBox="0 0 18 18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 2v14H1V6h4V2h12m-1 1H6v3h10M2 7v2h3V7m-3 3v2h3v-2m-3 3v2h3v-2m1-6v2h6V7m-6 3v2h6v-2m-6 3v2h6v-2m1-6v2h3V7m-3 3v2h3v-2m-3 3v2h3v-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <div>
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Insert function"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 14.25q-.25.75-.75 1.25T5 16q-.75 0-1.5-.5Q3 15 3 14.25q0-.5.25-.75t.75-.25q.25 0 .25.75v.5H5q.5 0 .5-.5l1.25-6.5H5V6h2l.5-2.25q.25-.75.75-1.25T9.5 2q1 0 1.5.5t.5 1q0 .5-.25.75t-.5.25q-.5 0-.75-.25t-.25-.5V3H9.5q-.25 0-.5.5L8.5 6H10v1.5H8.25m1.25 1H15v1h-4l2 2-2 2h4v1H9V14l2.5-2.5L9 9"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="misc"
          >
            <div
              class="o-table-widget d-flex align-item-center o-toolbar-button o-hoverable-button o-mobile-disabled"
            >
              <span
                class="o-menu-item-button o-hoverable-button"
                title="Insert table"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon"
                    height="18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.5 1A1.5 1.5 0 0 0 1 2.5v11A1.5 1.5 0 0 0 2.5 15h5c0-.5 0-1 .5-1.5H7v-2.75h3.5v.75l2.25-2.25H12v-2.5h3.5v.75c1-.7 1.5-.4 1.5-.4V2.5A1.5 1.5 0 0 0 15.5 1m-13 1.5h13v2.75h-13m0 1.5h3v2.5h-3M7 6.75h3.5v2.5H7m-4.5 1.5h3v2.75h-3m7.5-.3c.7-.3 1.5-.1 2.1.6.6.7.8 1.4.5 1.9-.6 1.4-3.7 1.6-4 1.7l-.6.1.3-.5s.5-.8.5-2.1c0-.7.5-1.4 1.1-1.7Zm6.7-5.1a.9.9 0 0 1 1 1c-.1 1.3-2.5 3.7-4.3 5.3a3.9 3.9 0 0 0-.6-1.1c-.4-.4-.8-.7-1.3-.8 1.5-1.7 4-4.3 5.4-4.4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
            </div>
            
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Add filters"
            >
              <span
                style=""
              >
                <div
                  class="o-icon filter-icon-active"
                >
                  <i
                    class="fa fa-filter"
                  />
                </div>
              </span>
              
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="d-flex align-items-center flex-grow-1 me-auto more-tools-container d-none"
          >
            <span
              class="o-toolbar-button o-menu-item-button o-hoverable-button  me-2 px-1 py-2 more-tools"
            >
              <svg
                class="o-icon"
                fill="currentColor"
                viewBox="0 0 4 12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="3.5"
                  r="1"
                />
                <circle
                  cx="2"
                  cy="6.5"
                  r="1"
                />
                <circle
                  cx="2"
                  cy="9.5"
                  r="1"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="o-topbar-composer-container w-100"
      >
        <div
          class="o-topbar-composer position-relative bg-white user-select-text d-flex border o-topbar-composer-inactive"
        >
          <div
            class="o-composer-container w-100 h-100"
          >
            <div
              class="d-flex flex-row position-relative"
            >
              
              <div
                class="o-composer w-100 text-start"
                contenteditable="plaintext-only"
                inputmode="text"
                spellcheck="false"
                style="padding:5px 0px 5px 8px; max-height:300px; line-height:24px; height:34px; "
                tabindex="1"
              />
            </div>
            
            
          </div>
          
          <span
            class="position-absolute top-50 translate-middle-y ps-2 pe-none"
          >
            <svg
              class="o-icon fx-icon"
              viewBox="0 0 121.8 122.9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
                fill="currentColor"
              />
            </svg>
          </span>
          
        </div>
      </div>
      
      
    </div>
    
    
  </div>
  <div
    class="o-grid-container o-two-columns"
    style="grid-template-columns:0px auto; grid-template-rows:0px auto; zoom:1; "
  >
    <div
      class="o-top-left"
    />
    <div
      class="o-column-groups o-zoomable"
    >
      
    </div>
    <div
      class="o-row-groups o-zoomable"
    >
      
    </div>
    <div
      class="o-group-grid overflow-hidden"
    >
      <div
        class="o-grid w-100 h-100 o-zoomable"
        composerfocusableelement="true"
        tabindex="-1"
      >
        <div
          class="position-absolute"
          style="top:26px; left:48px; height:calc(100% - 41px); width:calc(100% - 63px); cursor:default; "
        >
          <div
            class="position-absolute"
          >
            
          </div>
          
          
        </div>
        <div
          class="o-grid-overlay overflow-hidden o-zoomable"
          style="top:26px; left:48px; height:calc(100% - 41px); width:calc(100% - 63px); cursor:default; "
        >
          
          <div
            class="o-grid-add-rows mt-2 ms-2 w-100 d-flex position-relative align-items-center"
            style="top:2300px; "
          >
            <button
              class="o-button flex-grow-0 me-2"
              tabindex="-1"
            >
               Add 
            </button>
            <input
              class="o-grid-add-rows-input o-input mt-0 me-2"
              tabindex="-1"
              type="text"
              value="100"
            />
            <span>
              more rows at the bottom
            </span>
            
          </div>
          
          
          
        </div>
        
        <div
          class="o-overlay"
        >
          <div
            class="o-col-resizer d-flex o-zoomable"
          >
            
            
            
            
          </div>
          
          <div
            class="o-row-resizer o-zoomable"
          >
            
            
            
            
          </div>
          
          <div
            class="all"
          />
        </div>
        
        
        <div
          class="o-grid-composer"
          style="z-index: -1000; opacity: 0;"
        >
          <div
            class="o-composer-container w-100 h-100"
          >
            <div
              class="d-flex flex-row position-relative"
            >
              
              <div
                class="o-composer w-100 text-start"
                contenteditable="plaintext-only"
                inputmode="none"
                spellcheck="false"
                style="max-height: 956.6px;"
                tabindex="1"
              />
            </div>
            
            
          </div>
        </div>
        
        <canvas
          height="985"
          style="width:985px;height:985px;zoom:1"
          width="985"
        />
        
        
        
        
        <div
          class="o-autofill"
          style="top:45px; left:140px; visibility:visible; "
        />
        <div
          class="o-autofill-handler"
          style="top:45px; left:140px; "
        />
        
        
        
        
        
        
        
        
        <div
          class="o-scrollbar vertical"
          style="top:26px; right:0px; width:15px; bottom:0; "
        >
          <div
            style="width:1px; height:2346px; "
          />
        </div>
        
        <div
          class="o-scrollbar horizontal"
          style="left:48px; bottom:0px; height:15px; right:0; "
        >
          <div
            style="width:2496px; height:1px; "
          />
        </div>
        
        <div
          class="o-scrollbar corner border-top border-start"
        />
      </div>
    </div>
  </div>
  
  <div
    class="o-spreadsheet-bottombar-wrapper o-two-columns overflow-hidden"
  >
    
    <div
      class="o-spreadsheet-bottom-bar o-two-columns d-flex flex-fill align-items-center overflow-hidden border-top"
    >
      <div
        class="o-ripple-container position-relative add-sheet-container"
      >
        <div
          class="position-absolute w-100 h-100"
        >
          
        </div>
        <div
          class="position-relative"
        >
          <div
            class="o-sheet-item o-add-sheet me-2 p-1"
          >
            <svg
              class="o-icon plus"
              viewBox="0 0 18 18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 0h2v8h8v2h-8v8H8v-8H0V8h8"
                fill="currentColor"
              />
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="o-ripple-container position-relative"
      >
        <div
          class="position-absolute w-100 h-100"
        >
          
        </div>
        <div
          class="position-relative"
        >
          <div
            class="o-sheet-item o-list-sheets me-2 p-1"
            composerfocusableelement="true"
            tabindex="-1"
          >
            <svg
              class="o-icon"
              viewBox="0 0 384 384"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="currentColor"
                height="42.667"
                width="384"
                x="0"
                y="277.333"
              />
              <rect
                fill="currentColor"
                height="42.667"
                width="384"
                x="0"
                y="170.667"
              />
              <rect
                fill="currentColor"
                height="42.667"
                width="384"
                x="0"
                y="64"
              />
            </svg>
          </div>
        </div>
      </div>
      
      <div
        class="o-all-sheets position-relative d-flex h-100 flex-fill overflow-hidden"
      >
        
        <div
          class="o-sheet-list d-flex w-100 px-1"
        >
          <div
            class="o-ripple-container position-relative"
          >
            <div
              class="position-absolute w-100 h-100"
            >
              
            </div>
            <div
              class="position-relative"
            >
              <div
                class="o-sheet d-flex align-items-center user-select-none text-nowrap border-start border-end active"
                composerfocusableelement="true"
                data-id="sh1"
                style=""
                tabindex="-1"
                title="Sheet1"
              >
                <span
                  class="o-sheet-name"
                  contenteditable="false"
                >
                  Sheet1
                </span>
                <span
                  class="o-sheet-icon ms-1"
                  tabindex="-1"
                >
                  <div
                    class="o-icon fa-small o-caret-down"
                  >
                    <i
                      class="fa fa-caret-down"
                    />
                  </div>
                </span>
                
              </div>
            </div>
          </div>
          
          
        </div>
        
      </div>
      
      
      
      
    </div>
    
  </div>
  
</div>
`;

exports[`components take the small screen into account 1`] = `
<div
  class="o-spreadsheet h-100 w-100 o-spreadsheet-mobile"
  style="grid-template-rows:min-content auto min-content; grid-template-columns:auto auto; --os-scrollbar-width:15px; "
>
  
  <div
    class="o-spreadsheet-topbar-wrapper o-two-columns"
  >
    <div
      class="o-spreadsheet-topbar d-flex flex-column user-select-none bg-white"
    >
      
      <!-- Toolbar and Cell Content -->
      
      <div
        class="o-topbar-toolbar d-flex"
      >
        <!-- Toolbar -->
        <div
          class="o-toolbar-tools d-flex ms-3 flex-grow-1"
        >
          <div
            class="d-flex tool-container"
            id="edit"
          >
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Undo (Ctrl+Z)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.43 9.43 8 12H1V5l2.96 2.958A8.29 8.29 0 0 1 9.32 6c3.46 0 6.42 2.11 7.68 5l-2 1c-.94-2.39-3.13-3.92-5.68-4a6.57 6.57 0 0 0-3.89 1.43"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Redo (Ctrl+Y)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12.57 9.43 10 12h7V5l-2.96 2.96A8.29 8.29 0 0 0 8.68 6C5.22 6 2.26 8.11 1 11l2 1c.94-2.39 3.13-3.92 5.68-4a6.58 6.58 0 0 1 3.89 1.43"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button o-mobile-disabled"
              title="Paint Format"
            >
              <span>
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9,0 L1,0 C0.45,0 0,0.45 0,1 L0,4 C0,4.55 0.45,5 1,5 L9,5 C9.55,5 10,4.55 10,4 L10,3 L11,3 L11,6 L4,6 L4,14 L6,14 L6,8 L13,8 L13,2 L10,2 L10,1 C10,0.45 9.55,0 9,0 Z"
                    fill="currentColor"
                    transform="translate(3 2)"
                  />
                </svg>
              </span>
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Clear formatting (Ctrl+<)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.12 4.05 7.28 9.2l-2.43 5.3h2.5l1.64-3.58 4.59 4.58 1.27-1.27L3.4 2.77 2.12 4.05ZM5.67 2.5l2 2h1.76l-.55 1.21 1.71 1.71 1.34-2.92h3.92v-2H5.67"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <div>
              <div
                class="o-dropdown"
              >
                <div
                  class="o-number-editor d-flex align-items-center o-menu-item-button o-hoverable-button o-toolbar-button"
                  title="Zoom"
                >
                  <input
                    class="o-font-size o-number-input bg-transparent border-0"
                    max="300"
                    min="25"
                    type="number"
                  />
                  %
                  <span>
                    <div
                      class="o-icon fa-small o-caret-down"
                    >
                      <i
                        class="fa fa-caret-down"
                      />
                    </div>
                  </span>
                </div>
                
              </div>
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="numberFormat"
          >
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Format as percent"
            >
              <span
                style=""
              >
                <span
                  class="o-text-icon"
                >
                  %
                </span>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Decrease decimal places"
            >
              <span
                style=""
              >
                <span
                  class="o-text-icon"
                >
                  .0
                </span>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Increase decimal places"
            >
              <span
                style=""
              >
                <span
                  class="o-text-icon"
                >
                  .00
                </span>
              </span>
              
              
            </span>
            <div>
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="More formats"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon"
                    fill="currentColor"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 6h2v8h2V4H0m9 0H5v2h4v2H6.5A1.5 1.5 0 0 0 5 9.5V14h6v-2H7v-2h2.5A1.5 1.5 0 0 0 11 8.5v-3A1.5 1.5 0 0 0 9.5 4M12 4v2h4v2h-2v2h2v2h-4v2h4.5a1.5 1.5 0 0 0 1.5-1.5v-2A1.5 1.5 0 0 0 16.5 9 1.5 1.5 0 0 0 18 7.5v-2A1.5 1.5 0 0 0 16.5 4"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="fontSize"
          >
            <div
              class="o-dropdown"
            >
              <div
                class="o-number-editor d-flex align-items-center o-hoverable-button o-toolbar-button"
                title="Font Size"
              >
                <input
                  class="o-font-size o-number-input bg-transparent border-0"
                  max="400"
                  min="1"
                  type="number"
                />
                
                <span>
                  <div
                    class="o-icon fa-small o-caret-down"
                  >
                    <i
                      class="fa fa-caret-down"
                    />
                  </div>
                </span>
              </div>
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="textStyle"
          >
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Bold (Ctrl+B)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M13.5 6.5C13.5 4.57 11.93 3 10 3H4.5v12h6.25c1.79 0 3.25-1.46 3.25-3.25 0-1.3-.77-2.41-1.87-2.93.83-.58 1.37-1.44 1.37-2.32M9.5 5c.83 0 1.5.67 1.5 1.5S10.33 8 9.5 8h-2V5h2m-2 8v-3H10c.83 0 1.5.67 1.5 1.5S10.83 13 10 13H7.5"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Italic (Ctrl+I)"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 3v2h2.58l-3.66 8H3v2h8v-2H8.42l3.66-8H15V3"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Strikethrough"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.89 6.06c0-.46.1-.87.3-1.25.2-.38.46-.7.84-.97s.78-.47 1.28-.62A5.71 5.71 0 0 1 8.93 3c.61 0 1.16.08 1.65.25.5.17.92.4 1.27.7.35.3.62.66.81 1.07.19.41.28.87.28 1.36h-2.26a1.85 1.85 0 0 0-.11-.64 1.26 1.26 0 0 0-.33-.51 1.53 1.53 0 0 0-.56-.33A2.42 2.42 0 0 0 8.89 4.8c-.3 0-.55.03-.77.1a1.52 1.52 0 0 0-.54.27 1.14 1.14 0 0 0-.43.9c0 .36.18.66.55.91l.06.04C8.02 7.19 8.5 7.5 9 8H6s-.79-.62-.82-.69c-.19-.36-.29-.77-.29-1.25M16 9H2v2h7.22c.14.05.3.1.41.15.28.12.5.26.65.38.16.13.26.27.32.42.06.15.08.33.08.51 0 .18-.03.34-.1.49a1.02 1.02 0 0 1-.31.39 1.6 1.6 0 0 1-.53.26 2.71 2.71 0 0 1-.76.09c-.33 0-.62-.03-.89-.1a1.8 1.8 0 0 1-.68-.31 1.45 1.45 0 0 1-.44-.56c-.11-.23-.19-.57-.19-.74H4.55c0 .25.06.69.18 1.02a3.15 3.15 0 0 0 1.22 1.6c.28.2.58.36.92.49.33.13.67.23 1.04.29.36.06.72.09 1.08.09.6 0 1.15-.07 1.64-.21a3.88 3.88 0 0 0 1.25-.59 2.69 2.69 0 0 0 .8-.95c.19-.38.28-.81.28-1.29 0-.45-.08-.86-.23-1.211a2.26 2.26 0 0 0-.13-.25L16 11V9"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <div
              class="d-flex align-items-center"
            >
              <div
                class="o-color-picker-widget"
              >
                <span
                  class="o-color-picker-button o-hoverable-button o-menu-item-button o-toolbar-button"
                  title="Text Color"
                >
                  <span
                    style="border-color: #000000"
                  >
                    <svg
                      class="o-icon"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M10 1H8L3.5 13h2l1.12-3h4.75l1.12 3h2L10 1ZM7.38 8 9 3.67 10.62 8H7.38"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                
              </div>
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="cellStyle"
          >
            <div
              class="d-flex align-items-center"
            >
              <div
                class="o-color-picker-widget"
              >
                <span
                  class="o-color-picker-button o-hoverable-button o-menu-item-button o-toolbar-button"
                  title="Fill Color"
                >
                  <span
                    style="border-color: #ffffff"
                  >
                    <svg
                      class="o-icon"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M14.5 8.87S13 10.49 13 11.49c0 .83.67 1.5 1.5 1.5s1.5-.67 1.5-1.5c0-.99-1.5-2.62-1.5-2.62m-1.79-2.08L5.91 0 4.85 1.06l1.59 1.59-4.15 4.14a.996.996 0 0 0 0 1.41l4.5 4.5c.2.2.45.3.71.3.26 0 .51-.1.71-.29l4.5-4.5c.39-.39.39-1.03 0-1.42M4.21 7 7.5 3.71 10.79 7H4.21"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </span>
                
              </div>
            </div>
            <div
              class="d-flex position-relative"
              title="Borders"
            >
              <span
                class="o-hoverable-button o-menu-item-button o-toolbar-button"
              >
                <span>
                  <svg
                    class="o-icon"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 2v14h14V2H2m6 12H4v-4h4v4m0-6H4V4h4v4m6 6h-4v-4h4v4m0-6h-4V4h4v4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </span>
              
            </div>
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Merge cells"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6H1V2h7v2H3v2m7-2V2h7v4h-2V4h-5m0 10h5v-2h2v4h-7v-2m-9-2h2v2h5v2H1v-4m0-4h4V6l3 3-3 3v-2H1V8m9 1 3-3v2h4v2h-4v2l-3-3"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="alignment"
          >
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Horizontal align"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon align-left"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2 16h10v-2H2v2M12 6H2v2h10V6M2 2v2h14V2H2m0 10h14v-2H2v2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Vertical align"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon align-bottom"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.5 9H8V2h2v7h2.5L9 12.5M3 14v2h12v-2"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Wrapping"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon wrapping-overflow"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M13 8H6v2h7v2l3-3-3-3M2 2h2v14H2M9 2h2v4H9m0 6h2v4H9"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            <div
              class="o-dropdown"
            >
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Rotation"
              >
                <span
                  style=""
                >
                  <svg
                    height="18"
                    transform="rotate(270)"
                    viewBox="0 0 18 18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5 2h1v12h1.5l-2 2-2-2H5m6-5h1v5h1.5l-2 2-2-2H11M8 2l7 2.8V6L8 8.8l-.43-1.12 1.9-.7V3.8l-1.9-.7L8 1.98m2.7 2.25v2.3l2.8-1.1z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="insert"
          >
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Insert chart"
            >
              <span
                style=""
              >
                <div
                  class="o-icon"
                >
                  <i
                    class="fa fa-bar-chart"
                  />
                </div>
              </span>
              
              
            </span>
            <span
              class="o-menu-item-button o-disabled o-hoverable-button o-toolbar-button"
              title="Insert pivot table"
            >
              <span
                style=""
              >
                <svg
                  class="o-icon"
                  viewBox="0 0 18 18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 2v14H1V6h4V2h12m-1 1H6v3h10M2 7v2h3V7m-3 3v2h3v-2m-3 3v2h3v-2m1-6v2h6V7m-6 3v2h6v-2m-6 3v2h6v-2m1-6v2h3V7m-3 3v2h3v-2m-3 3v2h3v-2"
                    fill="currentColor"
                  />
                </svg>
              </span>
              
              
            </span>
            <div>
              <span
                class="o-menu-item-button o-hoverable-button o-toolbar-button"
                title="Insert function"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 14.25q-.25.75-.75 1.25T5 16q-.75 0-1.5-.5Q3 15 3 14.25q0-.5.25-.75t.75-.25q.25 0 .25.75v.5H5q.5 0 .5-.5l1.25-6.5H5V6h2l.5-2.25q.25-.75.75-1.25T9.5 2q1 0 1.5.5t.5 1q0 .5-.25.75t-.5.25q-.5 0-.75-.25t-.25-.5V3H9.5q-.25 0-.5.5L8.5 6H10v1.5H8.25m1.25 1H15v1h-4l2 2-2 2h4v1H9V14l2.5-2.5L9 9"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
              
            </div>
            
            
            <div
              class="o-topbar-divider border-end"
            />
            
          </div>
          <div
            class="d-flex tool-container"
            id="misc"
          >
            <div
              class="o-table-widget d-flex align-item-center o-toolbar-button o-hoverable-button o-mobile-disabled"
            >
              <span
                class="o-menu-item-button o-hoverable-button"
                title="Insert table"
              >
                <span
                  style=""
                >
                  <svg
                    class="o-icon"
                    height="18"
                    width="18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.5 1A1.5 1.5 0 0 0 1 2.5v11A1.5 1.5 0 0 0 2.5 15h5c0-.5 0-1 .5-1.5H7v-2.75h3.5v.75l2.25-2.25H12v-2.5h3.5v.75c1-.7 1.5-.4 1.5-.4V2.5A1.5 1.5 0 0 0 15.5 1m-13 1.5h13v2.75h-13m0 1.5h3v2.5h-3M7 6.75h3.5v2.5H7m-4.5 1.5h3v2.75h-3m7.5-.3c.7-.3 1.5-.1 2.1.6.6.7.8 1.4.5 1.9-.6 1.4-3.7 1.6-4 1.7l-.6.1.3-.5s.5-.8.5-2.1c0-.7.5-1.4 1.1-1.7Zm6.7-5.1a.9.9 0 0 1 1 1c-.1 1.3-2.5 3.7-4.3 5.3a3.9 3.9 0 0 0-.6-1.1c-.4-.4-.8-.7-1.3-.8 1.5-1.7 4-4.3 5.4-4.4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                
                <div
                  class="o-icon fa-small o-caret-down"
                >
                  <i
                    class="fa fa-caret-down"
                  />
                </div>
                
              </span>
              
            </div>
            
            <span
              class="o-menu-item-button o-hoverable-button o-toolbar-button"
              title="Add filters"
            >
              <span
                style=""
              >
                <div
                  class="o-icon filter-icon-active"
                >
                  <i
                    class="fa fa-filter"
                  />
                </div>
              </span>
              
              
            </span>
            
            
            
          </div>
          
          
          <div
            class="d-flex align-items-center flex-grow-1 me-auto more-tools-container d-none"
          >
            <span
              class="o-toolbar-button o-menu-item-button o-hoverable-button  me-2 px-1 py-2 more-tools"
            >
              <svg
                class="o-icon"
                fill="currentColor"
                viewBox="0 0 4 12"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="2"
                  cy="3.5"
                  r="1"
                />
                <circle
                  cx="2"
                  cy="6.5"
                  r="1"
                />
                <circle
                  cx="2"
                  cy="9.5"
                  r="1"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      
      
      
    </div>
    
    
  </div>
  <div
    class="o-grid-container o-two-columns"
    style="grid-template-columns:0px auto; grid-template-rows:0px auto; zoom:1; "
  >
    <div
      class="o-top-left"
    />
    <div
      class="o-column-groups o-zoomable"
    >
      
    </div>
    <div
      class="o-row-groups o-zoomable"
    >
      
    </div>
    <div
      class="o-group-grid overflow-hidden"
    >
      <div
        class="o-grid w-100 h-100 o-zoomable"
        composerfocusableelement="true"
        tabindex="-1"
      >
        <div
          class="position-absolute"
          style="top:26px; left:48px; height:calc(100% - 41px); width:calc(100% - 63px); cursor:default; "
        >
          <div
            class="position-absolute"
          >
            
          </div>
          
          
        </div>
        <div
          class="o-grid-overlay overflow-hidden o-zoomable"
          style="top:26px; left:48px; height:calc(100% - 41px); width:calc(100% - 63px); cursor:default; "
        >
          
          <div
            class="o-grid-add-rows mt-2 ms-2 w-100 d-flex position-relative align-items-center"
            style="top:2300px; "
          >
            <button
              class="o-button flex-grow-0 me-2"
              tabindex="-1"
            >
               Add 
            </button>
            <input
              class="o-grid-add-rows-input o-input mt-0 me-2"
              tabindex="-1"
              type="text"
              value="100"
            />
            <span>
              more rows at the bottom
            </span>
            
          </div>
          
          
          
        </div>
        
        <div
          class="o-overlay"
        >
          <div
            class="o-col-resizer d-flex o-zoomable"
          >
            
            
            
            
          </div>
          
          <div
            class="o-row-resizer o-zoomable"
          >
            
            
            
            
          </div>
          
          <div
            class="all"
          />
        </div>
        
        
        <div
          class="o-grid-composer"
          style="z-index: -1000; opacity: 0;"
        >
          <div
            class="o-composer-container w-100 h-100"
          >
            <div
              class="d-flex flex-row position-relative"
            >
              
              <div
                class="o-composer w-100 text-start"
                contenteditable="plaintext-only"
                inputmode="none"
                spellcheck="false"
                style="max-height: 956.6px;"
                tabindex="1"
              />
            </div>
            
            
          </div>
        </div>
        
        <canvas
          height="985"
          style="width:485px;height:985px;zoom:1"
          width="485"
        />
        
        
        
        
        <div
          class="o-autofill"
          style="top:45px; left:140px; visibility:visible; "
        />
        <div
          class="o-autofill-handler"
          style="top:45px; left:140px; "
        />
        
        
        
        
        
        
        
        
        <div
          class="o-scrollbar vertical"
          style="top:26px; right:0px; width:15px; bottom:0; "
        >
          <div
            style="width:1px; height:2346px; "
          />
        </div>
        
        <div
          class="o-scrollbar horizontal"
          style="left:48px; bottom:0px; height:15px; right:0; "
        >
          <div
            style="width:2496px; height:1px; "
          />
        </div>
        
        <div
          class="o-scrollbar corner border-top border-start"
        />
      </div>
    </div>
  </div>
  
  <div
    class="o-spreadsheet-bottombar-wrapper o-two-columns overflow-hidden"
  >
    <div
      class="o-spreadsheet-small-bottom-bar o-two-columns d-flex flex-column overflow-hidden"
    >
      
      <div
        class="o-small-composer px-2 py-2 position-relative bg-white border"
      >
        <div
          class="w-100"
        >
          <div
            class="o-composer-container w-100 h-100"
          >
            <div
              class="d-flex flex-row position-relative"
            >
              
              <div
                class="o-composer w-100 text-start"
                contenteditable="plaintext-only"
                inputmode="text"
                spellcheck="false"
                style="height:26px; max-height:130px; "
                tabindex="1"
              />
            </div>
            
            
          </div>
          
          <span
            class="position-absolute top-50 translate-middle-y ps-2 pe-none"
          >
            <svg
              class="o-icon fx-icon"
              viewBox="0 0 121.8 122.9"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m28 34-4 5v2h10l-6 40c-4 22-6 28-7 30-2 2-3 3-5 3-3 0-7-2-9-4H4c-2 2-4 4-4 7s4 6 8 6 9-2 15-8c8-7 13-17 18-39l7-35 13-1 3-6H49c4-23 7-27 11-27 2 0 5 2 8 6h4c1-1 4-4 4-7 0-2-3-6-9-6-5 0-13 4-20 10-6 7-9 14-11 24h-8zm41 16c4-5 7-7 8-7s2 1 5 9l3 12c-7 11-12 17-16 17l-3-1-2-1c-3 0-6 3-6 7s3 7 7 7c6 0 12-6 22-23l3 10c3 9 6 13 10 13 5 0 11-4 18-15l-3-4c-4 6-7 8-8 8-2 0-4-3-6-10l-5-15 8-10 6-4 3 1 3 2c2 0 6-3 6-7s-2-7-6-7c-6 0-11 5-21 20l-2-6c-3-9-5-14-9-14-5 0-12 6-18 15l3 3z"
                fill="currentColor"
              />
            </svg>
          </span>
          
        </div>
        
      </div>
      
      <div
        class="d-flex flex-fill align-items-center bottom-bar-menu border-top border-bottom"
      >
        <div
          class="o-ripple-container position-relative"
        >
          <div
            class="position-absolute w-100 h-100"
          >
            
          </div>
          <div
            class="position-relative"
          >
            <div
              class="py-1 px-1 mx-2 ribbon-toggler"
            >
              <i
                class="o-icon fa fa-cog"
              />
            </div>
          </div>
        </div>
        
        <div
          class="o-spreadsheet-bottom-bar o-two-columns d-flex flex-fill align-items-center overflow-hidden border-top"
        >
          <div
            class="o-ripple-container position-relative add-sheet-container"
          >
            <div
              class="position-absolute w-100 h-100"
            >
              
            </div>
            <div
              class="position-relative"
            >
              <div
                class="o-sheet-item o-add-sheet me-2 p-1"
              >
                <svg
                  class="o-icon plus"
                  viewBox="0 0 18 18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 0h2v8h8v2h-8v8H8v-8H0V8h8"
                    fill="currentColor"
                  />
                </svg>
              </div>
            </div>
          </div>
          
          <div
            class="o-ripple-container position-relative"
          >
            <div
              class="position-absolute w-100 h-100"
            >
              
            </div>
            <div
              class="position-relative"
            >
              <div
                class="o-sheet-item o-list-sheets me-2 p-1"
                composerfocusableelement="true"
                tabindex="-1"
              >
                <svg
                  class="o-icon"
                  viewBox="0 0 384 384"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    fill="currentColor"
                    height="42.667"
                    width="384"
                    x="0"
                    y="277.333"
                  />
                  <rect
                    fill="currentColor"
                    height="42.667"
                    width="384"
                    x="0"
                    y="170.667"
                  />
                  <rect
                    fill="currentColor"
                    height="42.667"
                    width="384"
                    x="0"
                    y="64"
                  />
                </svg>
              </div>
            </div>
          </div>
          
          <div
            class="o-all-sheets position-relative d-flex h-100 flex-fill overflow-hidden"
          >
            
            <div
              class="o-sheet-list d-flex w-100 px-1"
            >
              <div
                class="o-ripple-container position-relative"
              >
                <div
                  class="position-absolute w-100 h-100"
                >
                  
                </div>
                <div
                  class="position-relative"
                >
                  <div
                    class="o-sheet d-flex align-items-center user-select-none text-nowrap border-start border-end active"
                    composerfocusableelement="true"
                    data-id="Sheet1"
                    style=""
                    tabindex="-1"
                    title="Sheet1"
                  >
                    <span
                      class="o-sheet-name"
                      contenteditable="false"
                    >
                      Sheet1
                    </span>
                    <span
                      class="o-sheet-icon ms-1"
                      tabindex="-1"
                    >
                      <div
                        class="o-icon fa-small o-caret-down"
                      >
                        <i
                          class="fa fa-caret-down"
                        />
                      </div>
                    </span>
                    
                  </div>
                </div>
              </div>
              
              
            </div>
            
          </div>
          
          
        </div>
        
      </div>
      
    </div>
    
    
  </div>
  
</div>
`;
